      - 'changeSystem': preinstall hooks v3: pass '-' instead of empty string
        as architecture for purged versions.
      - 'changeSystem': dpkg commands: run '--triggers-only --pending' even if
        trigger deferring is switched off (see #766758 for discussion).
      - 'changeSystem': preserve unknown fields when writing to extended
        states file.
    - system/resolvers/native:
      - Removed the version normalized score calculation skew.
        (Closes: #754480, #622939)
      - Implemented automatic quality adjustment.
      - Fixed not applying downgrade score for reinstalls. This regression
        was introduced in 2.6.0.
      - Significantly reduced not-user score part of upgrades.
      - For equal-scored version change variants (when replacing a version
        because of a broken relation), propose higher versions first.
    - versionstring:
      - [API break] 'getOriginal': return StringRange.
      - [API break] 'sameOriginal': removed as obsolete.
      - [API break] 'getOriginal': moved out of 'versionstring' namespace.
    - cache/binaryversion:
      - [API break] 'provides': are now versioned.
    - common:
      - 'checkVersionString': accept underscores (with warnings) again. This
        regression was introduced in 2.0.0~alpha1.
      - [API break] 'checkVersionString', 'compareVersionStrings': moved to
        'versionstring' header.
      - [API break] 'checkPackageName', 'consumePackageName': moved to
        'packagename' header.
      - [API break] 'checkPackageName': first parameter's type is now
        StringRange.
    - cache/relation:
      - [ABI break] Relation: new member 'architecture'.
    - cache:
      - [API break] PinnedVersion: renamed to VersionWithPriority.
      - [API break] 'getSortedPinnedVersions': renamed to
        getSortedVersionsWithPriorities.
      - Parsing extended states: don't choke on records without
        'Auto-Installed' field.
      - [ABI break] ExtendedInfo: new member 'raw'.