@@ -53,6 +53,8 @@ cupt (2.9.0~) UNRELEASED; urgency=medium
         trigger deferring is switched off (see #766758 for discussion).
       - 'changeSystem': preserve unknown fields when writing to extended
         states file.
+      - 'changeSystem': preinstall hook: if an input is supplied, don't hang
+        if the hook does not accept it all.
     - system/resolvers/native:
       - Removed the version normalized score calculation skew.
         (Closes: #754480, #622939)
